# consommation_energie_batiments

./: .gitignore  bentofile.yaml  check_config.py  pyproject.toml  readme.md  requirements.txt
data/processed/: dataset_cleaned.csv  dataset_cleaned_for_models.csv  dataset_processed_ghg_emissions_total.csv  dataset_processed_site_energy_use.csv
models/: best_model_LightGBM_ghg_emissions_total.pkl  best_model_LightGBM_site_energy_use.pkl  best_model_Random Forest_ghg_emissions_total.pkl  best_model_XGBoost_ghg_emissions_total.pkl  best_model_XGBoost_site_energy_use.pkl  features_site_energy_use.pkl  final_features_ghg_emissions_total.pkl  final_features_site_energy_use.pkl  final_model_ghg_emissions_total.pkl  final_model_site_energy_use.pkl  optimized_model_LightGBM_ghg_emissions_total.pkl
models/ghg_emissions_model/: features_ghg_emissions_total.pkl
models/site_energy_use_model/: optimized_model_LightGBM_site_energy_use.pkl
notebooks/: datas_description.ipynb  p6_ml_analysis.ipynb  p6_preprocessing.ipynb
outputs/: analyse_numerique.html
src/: co2_service.py  config.py  energy_service.py  preprocess_data_for_models.py  register_models_bentoml.py  service.py  test_api.py
tests/: test_api.py
